# Ollqd

./: .dockerignore  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile  Dockerfile.worker  LICENSE  Makefile  README.md  codebase_indexer.py  codebase_search.py  docker-compose.yml  index_codebase_qdrant.py  ollama-entrypoint.sh  ollqd.toml  pyproject.toml
.github/workflows/: test.yml
_docs/: 01-architecture.md  02-diagrams.md  03-user-flows.md  04-data-flows.md  05-features.md  06-api-reference.md  README.md
docs/: TEST_PLAN.md
gateway/: Dockerfile.gateway  go.mod  go.sum
gateway/cmd/gateway/: main.go
gateway/internal/config/: config.go
gateway/internal/docker/: docker.go
gateway/internal/grpc/: client.go
gateway/internal/handlers/: auth.go  helpers.go  image.go  ollama.go  qdrant.go  rag.go  smb.go  system.go  tasks.go  upload.go  users.go  ws.go
gateway/internal/middleware/: auth.go
gateway/internal/proxy/: ollama.go  qdrant.go
gateway/internal/server/: server.go
gateway/internal/tasks/: manager.go
proto/ollqd/v1/: processing.proto  types.proto
scripts/: test-run.sh
src/ollqd/: __init__.py  chunking.py  config.py  discovery.py  docling_converter.py  embedder.py  errors.py  models.py  vectorstore.py
src/ollqd/client/: main.py  mcp_bridge.py  ollama_agent.py  rag_loop.py
src/ollqd/server/: main.py
src/ollqd/web/: __init__.py  app.py  deps.py  models.py
src/ollqd_worker/: config.py  config_db.py  errors.py  main.py  models.py
src/ollqd_worker/processing/: chunking.py  discovery.py  embedder.py  pii_masking.py  vectorstore.py
src/ollqd_worker/services/: auth.py  chat.py  config_svc.py  embedding.py  indexing.py  pii.py  (+2 more)
tests/: conftest.py  test_chunking.py
tests/api/: conftest.py  test_collections.py  test_config.py  test_health.py  test_indexing.py  test_models.py  test_pii.py  test_search.py  test_security.py  test_upload.py  test_visualization.py  test_websocket.py
tests/grpc/: conftest.py  test_chat_service.py  test_config_service.py  test_embedding_service.py  test_indexing_service.py  test_pii_service.py  test_search_service.py  test_smb_service.py  test_visualization_service.py
tests/perf/: indexing_concurrent.py  k6_http.js  ws_concurrency.py
web/: nginx.conf
web/static/: app.js  index.html  styles.css
(+37 files in other folders)
