[project]
name = "ollqd"
version = "0.2.0"
description = "MCP client-server RAG system — index codebases & documents into Qdrant using Ollama embeddings"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "qdrant-client>=1.12",
    "mcp>=1.2",
]

[project.optional-dependencies]
client = [
    "ollama>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
# Legacy standalone scripts
codebase-index = "codebase_indexer:main"
codebase-search = "codebase_search:main"
# MCP server + client
ollqd-server = "ollqd.server.main:main"
ollqd-chat = "ollqd.client.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollqd", "codebase_indexer.py", "codebase_search.py"]
