[project]
name = "ollqd"
version = "0.3.0"
description = "MCP client-server RAG system — index codebases & documents into Qdrant using Ollama embeddings"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "qdrant-client>=1.12",
    "mcp>=1.2",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
client = [
    "ollama>=0.4",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "pysmb>=1.2.9",
    "spacy>=3.7,<4.0",
]
worker = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=4.25",
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "pysmb>=1.2.9",
    "spacy>=3.7,<4.0",
]
docling = [
    "docling>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
# Legacy standalone scripts
codebase-index = "codebase_indexer:main"
codebase-search = "codebase_search:main"
# MCP server + client
ollqd-server = "ollqd.server.main:main"
ollqd-chat = "ollqd.client.main:main"
# WebUI
ollqd-web = "ollqd.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollqd", "src/ollqd_worker", "codebase_indexer.py", "codebase_search.py"]
